display course on course edit page done

--- a/src/app/courses/course-edit/course-edit.component.html
+++ b/src/app/courses/course-edit/course-edit.component.html
@@ -12,7 +12,7 @@
                         Course Name
                     </div>
                     <div class="col-sm-9">
-                        <input class="form-control" formControlName="cCourseName" [(ngModel)]="courseObj.CourseName" name="CourseName" placeholder="Enter Course Name"
+                        <input class="form-control" formControlName="cCourseName" [(ngModel)]="courseObj.courseName" name="CourseName" placeholder="Enter Course Name"
                         ngModel>
                     </div>
                 </div>
