--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -33,9 +33,9 @@
             </td>
             <td class="text-center">
                 <div class="w-75 btn-group" role="group">
-                    <a class="btn btn-danger mx-2 ">
+                    <button  mat-button class="btn btn-danger mx-2 " (click)="deleteCourse(item.courseId, item.courseName)">
                         Delete
-                    </a>
+                    </button>
                 </div>
             </td>
           </tr>
