add page done, setting default date

--- a/src/app/students/students.component.html
+++ b/src/app/students/students.component.html
@@ -5,7 +5,7 @@
             List Of Students
         </div>
         <div class="col-sm-4 my-auto h3">
-            <a class="btn btn-success fa-pull-right" routerLink="/students/student-edit" [state]="{state : {student:null}}">
+            <a class="btn btn-success fa-pull-right" routerLink="/students/student-add" [state]="{state : {student:null}}">
                 <i class="fas fa-plus"> Add Student</i>
             </a>
         </div>
