--- a/src/app/students/student-add/student-add.component.html
+++ b/src/app/students/student-add/student-add.component.html
@@ -32,7 +32,8 @@
                     <div class="col-sm-9">
                         <!--datepicker input-->
                         <mat-form-field>
-                            <input matInput [matDatepicker]="picker" [ngModelOptions]="{standalone: true}" [(ngModel)]="studObj.AdmissionDate" placeholder="Choose a date" name="AdmissionDate">
+                            <input matInput [matDatepicker]="picker" [ngModelOptions]="{standalone: true}"  
+                            [(ngModel)]="studObj.AdmissionDate" placeholder="Choose a date" name="AdmissionDate">
                             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                             <mat-datepicker #picker></mat-datepicker>
                         </mat-form-field>
@@ -45,9 +46,8 @@
                         Course Name
                     </div>
                     <div class="col-sm-9">
-                        <!-- TO CHECK HOW TO LOAD THE SELECTED VALUE IN DROPDOWN-->
-                        <select class="form-control" name="Course" [(ngModel)]="studObj.Course.courseId" [ngModelOptions]="{standalone: true}">
-                            <option *ngFor="let c of courseList" [ngValue]="c.courseId" >
+                        <select class="form-control" name="Course" [(ngModel)]="studObj.Course" [ngModelOptions]="{standalone: true}">
+                            <option *ngFor="let c of courseList" [ngValue]="c" >
                                 {{c.courseName}}
                             </option>
                         </select>
@@ -71,4 +71,5 @@
         </div>
     </div>
 </form>
+
 
