--- a/src/app/students/students.component.html
+++ b/src/app/students/students.component.html
@@ -37,7 +37,7 @@
             </td>
             <td class="text-center">
                 <div class="w-75 btn-group" role="group">
-                    <button class="btn btn-danger mx-2" style="min-width: 100px;">
+                    <button class="btn btn-danger mx-2" style="min-width: 100px;" (click)="deleteStudent(item)">
                         Delete
                     </button>
                 </div>
