Added about page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,51 @@
-<mat-form-field>
-    <input matInput [matDatepicker]="picker" placeholder="Choose a date">
-    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker>
-  </mat-form-field>
+<div class="container">
+  <h1>About this Project</h1>
+  <div class="container col-sm-6">
+    <br>
+    <table class="table table-bordered table-dark">
+      <thead>
+        <tr>
+          <th scope="col">Specifications</th>
+          <th scope="col"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Frontend</td>
+          <td>Angular 11</td>
+        </tr>
+        <tr>
+          <td>Backend</td>
+          <td>MVC Core 5.0</td>
+        </tr>
+        <tr>
+          <td>Database</td>
+          <td>SQL Server</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+<br>
+<br>
+<div class="container">
+  <pre style="font-family: serif; font-size: medium;">
+    <b>
+    This project was introduced while I was studying for SGUnited skills for Full Stack Developer 
+    under NTUC learning Hub.
+  
+    It went through alot of transformation as we were taught first to use console app to program the logic.
+    After that, use Javascript, Html and CSS to make it look better
+ 
+    As the courses went, I thought we will be using this project for MVC and Angular. 
+    So in my free time, I have successfully convert it to MVC with razor syntax and asp helper tags.
+
+    Although in the end this project was not selected for MVC and Angular, I decided to use this project 
+    to revise on what has been gone through during the lectures.
+    
+    There are still alot of places to improve (like css and ngrx) but this project is created to put what 
+    I have learned to use so I will be using this as a testbed in the future if there is a need.
+  
+  </b>
+  </pre>
+</div>
