--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron bg-dark text-white">
   <p>Contoso University</p>
 </div>
 <div class="container-fluid">
