--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 
 #background{
     /* background-image: url(./assets/images/curtin1.jpg); */
-    background-color: lightblue;
+    background-color: rgb(187, 216, 226);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
