--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,10 @@
 .jumbotron {
     padding-top: 5px;
     padding-bottom: 5px;
+    border-radius: 0;
     width: 100%;
     margin-bottom: 0px;
+    font-size: medium;
 }
 
 #mainWindow{
